using System.Collections;
using UnityEngine;


public class AnimationString
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string IsAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string attackCooldown = "attackCooldown";
    internal static string rangedAttack = "rangedAttack";
    internal static string yVelocitySpeed = "yVelocitySpeed";
    internal static string groundPunch = "groundPunch";
    internal static string eatBox = "eatBox";
    internal static string upRun = "upRun";
    internal static string adRun = "adRun";
    internal static string downRun = "downRun";
}
